Test for combined keyword+region query in semantic layer, added test service to map server

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,6 +79,10 @@ add_message_files(
 #   Service1.srv
 #   Service2.srv
 # )
+add_service_files(
+  FILES
+  RetrieveStrVals.srv
+)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
