--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR})
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
-add_compile_options(-std=c++11)
+add_compile_options(-std=c++14)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
@@ -16,7 +16,7 @@ find_package(catkin REQUIRED COMPONENTS
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
-find_package(Boost REQUIRED)
+find_package(Boost 1.58 REQUIRED)
 find_package(LibZip REQUIRED)
 
 ## This setting causes Qt's "MOC" generation to happen automatically.
@@ -74,6 +74,8 @@ endif()
 add_message_files(
   FILES
   HypermapImage.msg
+  SemanticObject.msg
+  SemanticMap.msg
 )
 
 ## Generate services in the 'srv' folder
@@ -185,6 +187,7 @@ set (MAP_SOURCE_FILES
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/hypermap_node.cpp)
 add_executable(map_server src/map_server.cpp ${MAP_SOURCE_FILES})
+add_executable(map_generator src/map_generator.cpp ${MAP_SOURCE_FILES})
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -197,12 +200,14 @@ add_executable(map_server src/map_server.cpp ${MAP_SOURCE_FILES})
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 add_dependencies(map_server ${catkin_EXPORTED_TARGETS})
+add_dependencies(map_generator ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
 # target_link_libraries(${PROJECT_NAME}_node
 #   ${catkin_LIBRARIES}
 # )
 target_link_libraries(map_server ${catkin_LIBRARIES} ${LIBZIP_LIBRARY})
+target_link_libraries(map_generator ${catkin_LIBRARIES} ${LIBZIP_LIBRARY})
 target_link_libraries(${PROJECT_NAME}_viz ${QT_LIBRARIES})
 
 #############
