--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -199,8 +199,8 @@ add_executable(map_generator src/map_generator.cpp ${MAP_SOURCE_FILES})
 ## same as for the library above
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
-add_dependencies(map_server ${catkin_EXPORTED_TARGETS})
-add_dependencies(map_generator ${catkin_EXPORTED_TARGETS})
+add_dependencies(map_server ${catkin_EXPORTED_TARGETS} hypermap_generate_messages_cpp)
+add_dependencies(map_generator ${catkin_EXPORTED_TARGETS} hypermap_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
 # target_link_libraries(${PROJECT_NAME}_node
