--- a/package.xml
+++ b/package.xml
@@ -53,7 +53,8 @@
   <depend>boost</depend>
   <depend>roscpp</depend>
   <depend>rospy</depend>
-  <depend>tf</depend>
+  <depend>tf2_ros</depend>
+  <depend>tf2_geometry_msgs</depend>
   <depend>std_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>hypermap_msgs</depend>
