Enabled possibility to read from file system instead of archive, read subscribe_mode and enable_update properties from config

--- a/package.xml
+++ b/package.xml
@@ -58,6 +58,7 @@
   <depend>std_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>hypermap_msgs</depend>
+  <depend>map_msgs</depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
